packages/toolkit/components/auto-complete/_auto-complete.scss
// Accessible autocomplete

.autocomplete__wrapper {
  position: relative;

  ul > li {
    margin-bottom: 0;
  }
}

.autocomplete__hint,
.autocomplete__input {
  @include ofh-font('paragraph-md');
  @include ofh-responsive-padding(8, 'vertical');
  @include ofh-responsive-padding(16, 'horizontal');

  appearance: none;
  border: $ofh-stroke-weight-2 solid $ofh-color-border-input-default;
  border-radius: 0; /* Safari 10 on iOS adds implicit border rounding. */
  box-sizing: border-box;
  margin-bottom: 0; /* BUG: Safari 10 on macOS seems to add an implicit margin. */
  width: 100%;
}

.autocomplete__input {
  background-color: $ofh-color-background-primary;
  position: relative;

  &:hover:not(:disabled, .autocomplete__input--error) {
    @include ofh-emphasised-input-border($ofh-color-border-input-default);
  }

  &:active:not(:disabled, .autocomplete__input--error) {
    @include ofh-emphasised-input-border($ofh-color-border-input-active);
  }
}

.autocomplete__hint {
  color: $ofh-color-foreground-secondary;
  position: absolute;
}

.autocomplete__input--focused {
  @include ofh-focused-input;
}

.autocomplete__input--error {
  @include ofh-emphasised-input-border($ofh-color-border-feedback-error);

  &.autocomplete__input--focused {
    @include ofh-focused-input($ofh-color-border-feedback-error);
  }
}

.autocomplete__input--show-all-values {
  cursor: pointer;
}

.autocomplete__menu {
  background-color: $ofh-color-background-primary;
  border: $ofh-stroke-weight-2 solid $ofh-color-border-input-default;
  color: $ofh-color-foreground-primary;
  margin: 0;
  max-height: 384px;
  overflow-x: hidden;
  padding: 0;
  width: 100%;
}

.autocomplete__menu--with-suggestions::before {
  @include ofh-font('paragraph-sm');
  @include ofh-responsive-padding(12, 'vertical');
  @include ofh-responsive-padding(16, 'horizontal');

  background-color: $ofh-color-background-secondary;
  color: $ofh-color-foreground-secondary;
  content: 'Suggestions';
  display: block;
}

.autocomplete__menu--visible {
  display: block;
}

.autocomplete__menu--hidden {
  display: none;
}

.autocomplete__menu--overlay {
  left: 0;
  position: absolute;
  top: 100%;
  z-index: 100;
}

.autocomplete__menu--inline {
  position: relative;
}

.autocomplete__option {
  @include ofh-font('paragraph-md');
  @include ofh-responsive-padding(12, 'vertical');
  @include ofh-responsive-padding(16, 'horizontal');

  border-top: $ofh-stroke-weight-1 solid $ofh-color-border-primary;
  cursor: pointer;
  display: block;
  min-height: ofh-px-to-rem(56px);
  position: relative;
}

.autocomplete__option > * {
  pointer-events: none;
}

.autocomplete__menu--with-suggestions .autocomplete__option:first-of-type {
  border-top-width: 0;
}

.autocomplete__menu:not(.autocomplete__menu--with-suggestions) .autocomplete__option:first-of-type {
  border-top-width: 0;
}

.autocomplete__option--focused,
.autocomplete__option:hover {
  background-color: $ofh-color-background-button-default;
  color: $ofh-color-foreground-primary-inverted;
  outline: none;
}

@media (-ms-high-contrast: active), (forced-colors: active) {
  .autocomplete__menu {
    border-color: FieldText;
  }

  .autocomplete__option {
    background-color: Field;
    color: FieldText;
  }

  .autocomplete__option--focused,
  .autocomplete__option:hover {
    background-color: Highlight;

    /* Prefer SelectedItem / SelectedItemText in browsers that support it */
    background-color: SelectedItem;
    border-color: Highlight;
    border-color: SelectedItem;
    color: HighlightText;
    color: SelectedItemText;
    forced-color-adjust: none; /* prevent backplate from obscuring text */
    outline-color: SelectedItemText;
  }
}

.autocomplete__option--no-results {
  @include ofh-font('paragraph-sm');
  @include ofh-responsive-padding(8, 'vertical');

  align-items: center;
  background-color: $ofh-color-background-secondary;
  border-top-width: 0;
  color: $ofh-color-foreground-secondary;
  cursor: not-allowed;
  display: flex;
  min-height: ofh-px-to-rem(44px);
}

.autocomplete__option--no-results:hover {
  background-color: $ofh-color-background-secondary;
  color: $ofh-color-foreground-secondary;
}

// End of accessible autocomplete

